<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beat Making App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="pattern_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    
    <string name="p_00">sabar_kick</string>
    <string name="p_01">sabar_kick_2</string>
    <string name="p_02">sabar_kick_cool</string>
    <string name="p_03">sabar_snare</string>
    <string name="p_10">sabar_snare_2</string>
    <string name="p_11">sabar_snare_3</string>
    <string name="p_12">sabar_snare_cool_2</string>
    <string name="p_13">sabar_snare_flam</string>
    <string name="p_20">sabar_snare_reverb</string>
    <string name="p_21">sabar_snare_reverb_3</string>
    <string name="p_22">sabar_snare_roll</string>
    <string name="p_23">sabar_tom</string>
    <string name="p_30">z_africanhat</string>
    <string name="p_31">z_doughat</string>
    <string name="p_32">z_gavgoodclosed</string>
    <string name="p_33">z_gavgoodopen</string>
    <string name="rename_dialog_hint">7 Letters</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename</string>
    <string name="newProject">New Project</string>
    <string name="loadProject">Load Project</string>
    <string name="saveProject">Export as Audio File</string>
    <string name="ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="removePattern">Remove Pattern</string>
    <string name="confirmation">Are you sure?</string>
    <string name="metronomeOn">Metronome\u2714 </string>
    <string name="metronomeOff">Metronome</string>
</resources>