<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/track_button"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="Tracks" 
                    android:onClick="callTrackActivity"/>

                <Button
                    android:id="@+id/pattern_number_button"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:clickable="false"
                    
                    android:textSize="25dp"
                    android:textColor="#FFFFFF"
                    android:background="#000000"
                    android:text="Pattern1" />

            </LinearLayout>

            <Button
                android:id="@+id/pattern_info_button"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Pattern Options" 
                android:onClick="callPatternOptions"
                />

            <Button
                android:id="@+id/edit_drum_machine_button"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Edit Drum Machine" />

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/play_button_pressed" />

            

            <ImageButton
                android:id="@+id/record_button"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/record_button_pressed" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/pad_00"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_00" />

            <Button
                android:id="@+id/pad_01"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_01" />

            <Button
                android:id="@+id/pad_02"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_02" />

            <Button
                android:id="@+id/pad_03"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_03" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/pad_10"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_10" />

            <Button
                android:id="@+id/pad_11"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_11" />

            <Button
                android:id="@+id/pad_12"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_12" />

            <Button
                android:id="@+id/pad_13"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/pad_20"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_20" />

            <Button
                android:id="@+id/pad_21"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_21" />

            <Button
                android:id="@+id/pad_22"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_22" />

            <Button
                android:id="@+id/pad_23"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_23" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/pad_30"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_30" />

            <Button
                android:id="@+id/pad_31"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_31" />

            <Button
                android:id="@+id/pad_32"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_32" />

            <Button
                android:id="@+id/pad_33"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/p_33" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".25" />

</LinearLayout>